...
  String get chooseTheme => 'Choose Theme';

  @override
  String get chooseLanguage => 'Choose Language';

  @override
  String get cancel => 'Cancel';

  @override
  String get privacyAndSecurity => 'Privacy & Security';

  @override
  String get privacySettings => 'Privacy Settings';
...
